[tool.poetry]
name = "authnz"
version = "0.1.0"
description = ""
authors = ["Kristopher Rahim <kristopherab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.8"
bcrypt = "^4.0.1"
password-strength = "^0.0.3.post2"
email-validator = "^2.0.0.post2"


[tool.poetry.group.test.dependencies]
testcontainers = {extras = ["postgresql"], version = "^3.7.1"}
pytest = "^7.3.1"


[tool.poetry.group.format.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
